--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link underline" id="navbar-color-home" href="#">Home <span class="sr-only">(current)</span></a>
+                            <a class="nav-link underline" id="navbar-color-home" href="#">Home <span
+                                    class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link underline" id="navbar-color-about" href="#">About/Tours</a>
@@ -37,7 +38,7 @@
                             <a class="nav-link underline" id="navbar-color-gallery" href="#">Gallery</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link underline" id="navbar-color-contact"  href="#">Contact</a>
+                            <a class="nav-link underline" id="navbar-color-contact" href="#">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -46,30 +47,31 @@
     </header>
 
     <section id="welcome">
-    <!---------------------- Home/welcome page  ----------------------->
-    <!------- CREDIT: inspiration/code snipped from Whiskey project in Bootstrap ------->
+        <!---------------------- Home/welcome page  ----------------------->
+        <!------- CREDIT: inspiration/code snipped from Whiskey project in Bootstrap ------->
         <div class="container-fluid d-flex justify-content-center home-container">
             <div class="row">
                 <div class="col-12">
                     <div class=" welcome-sign">
-                    <div class="welcome jumbotron text-center ">
-                        <h1 class="welcome-sign-top">...Hiking In Ireland And Much More ...</h1>
-                        
-                        <p class="welcome-sign-bottom">Travelling shouldn't be just a tour, It should be a tale.<br>
-                         And we are striving to make it a very special one</p>
+                        <div class="welcome jumbotron text-center ">
+                            <h1 class="welcome-sign-top">...Hiking In Ireland And Much More ...</h1>
 
-                        <p class="welcome-sign-botom">
-                            <a class="btn btn-primary btn-lg" href="contact.html" role="button">Book a tour with us!</a>
-                        </p>
-                    </div>
+                            <p class="welcome-sign-bottom">Travelling shouldn't be just a tour, It should be a tale.<br>
+                                And we are striving to make it a very special one</p>
+
+                            <p class="welcome-sign-botom">
+                                <a class="btn btn-primary btn-lg" href="contact.html" role="button">Book a tour with
+                                    us!</a>
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
     <!------------------------ About/Tours page ------------------------>
-    <section id="about">
-       <div class="container ">
+    <section>
+        <div class="container ">
             <div class="row heading-text">
                 <div class="col-12">
                     <h1>About</h1>
@@ -78,18 +80,16 @@
         </div>
 
         <div class="container about-content">
-            <div class="about-content"></div>
-            <div class="row display-inline content-item">
-                <div class="image">
-                    <div class="col-12 col-md-6">
-                        <div class="card">
-                            <img src="assets/images/about-team.jpg" alt="The hikers team">
-                            <div class="desc">Meet our team</div>
+            <div class="row  content-item">
+                <div class="col-md d-flex">
+                    <div class="card card-body flex-fill">
+                        <img src="assets/images/about-team.jpg" class="card-img" alt="The hikers team">
+                        <div class="card-desc">
+                            <h3>Meet our team</h3>
                         </div>
                     </div>
                 </div>
-
-                <div class="col-12 col-md-6 content-item-text">
+                <div class="col-md content-item-text">
                     <h3><strong> Welcome to the Ireland hiking of our dreams, we hope yours too</strong></h3>
                     <p>If you love hiking, you are fascinated by wonderful views, looking for adventure and you would
                         like to know more about
@@ -103,99 +103,171 @@
                     <p>We hope to see you soon on one of our trips</p>
                 </div>
             </div>
-            <div class="container">
-                <div class="row my-5 content-item-text">
-                    <div class="col-12">
-                        <h2><i class="fab fas fas fa-hiking"></i>  Tour option to chose :</h2>
-                        <p> We are organizing hiking tours from half day up to three days including a certified tour
-                            guide with a high sense of humor and include
-                            different variations for the trails in the region you choose to go to, depending on your
-                            time, desire, age and level of advancement,
-                            we will select and organize a trip for you. The price is estimated depending on the number
-                            of days you choose, season, accommodation and food you choose.  Tell us what you expect and we will organize a trip for you.<br>
-                             <a href="mailto:thehikers@ireland.ie"  class="contact-email" aria-label="Our Email Address"><strong><i class="fas fa-envelope" aria-hidden="true"></i>
-                            Contact us for more information.</strong></a>
-                        </p>
-                    </div>
+        </div>
+        <div class="container">
+            <div class="row my-5 content-item-text">
+                <div class="col-12">
+                    <h2><i class="fab fas fas fa-hiking"></i> Tour option to chose :</h2>
+                    <p> We are organizing hiking tours from half day up to three days including a certified tour
+                        guide with a high sense of humor and include
+                        different variations for the trails in the region you choose to go to, depending on your
+                        time, desire, age and level of advancement,
+                        we will select and organize a trip for you. The price is estimated depending on the number
+                        of days you choose, season, accommodation and food you choose. Tell us what you expect and we
+                        will organize a trip for you.<br>
+                        <a href="mailto:thehikers@ireland.ie" class="contact-email"
+                            aria-label="Our Email Address"><strong><i class="fas fa-envelope" aria-hidden="true"></i>
+                                Contact us for more information.</strong></a>
+                    </p>
                 </div>
             </div>
         </div>
+
         <div class="container">
-            <div class="row">
-                <div class="col-md">
-                    <div class="card card-body">
-                        <img src="" class="card-picture" alt="">
-                        <div class="card-desc">
-                            <h2>Wiclow Mountain Tours</h2>
+            <div class="row my-4">
+                <div class="col"></div>
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-md d-flex">
+                            <div class="card card-body flex-fill">
+                                <!------- CREDIT: Photo by Steven Hylands from Pexels ------->
+                                <img src="assets/images/wiclow4.jpg" class="card-img" alt="Wiclow mountain view">
+                                <div class="card-body-desc">
+                                    <h3>Wiclow Mountain Tours</h3>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                </div>
-                <div class="col-md">
-                    <div class="card card-body">
-                        <img src="" class="card-picture" alt="">
-                        <div class="card-body-desc">
-                            Connemara mountain Tours
+                        <div class="col-md d-flex">
+                            <div class="card card-body flex-fill">
+                                <!------- CREDIT: Image by _Artemis_ from Pixabay  ------->
+                                <img src="assets/images/conemara.jpg" class="card-img" alt="Conemara mountain view">
+                                <div class="card-desc">
+                                    <h3>Conemara Mountain Tour</h3>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md">
-                        <div class="card card-body">
-                            <img src="" class="card-picture" alt="">
-                            <div class="card-body-desc">
-                                Cliffs of Moher Tours
+
+                        <div class="col-md d-flex">
+                            <div class="card card-body flex-fill">
+                                <!------- CREDIT: Image by Nanni05 from Pixabay   ------->
+                                <img src="assets/images/cliffs-of-moher.jpg" class="card-img"
+                                    alt="Land Rover driving through mud">
+                                <div class="card-desc">
+                                    <h3>Cliffs Of Moher Tours</h3>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
-    <!------------------------ Gallery page ------------------------------>
 
-    <section>
-        <!----------------- Contact and Enquiry Form page --------------------->
 
-    </section>
+        <section>
+        <!------------------------ Gallery page ------------------------------>
 
 
 
 
-    <footer>
-        <div class="contact">
-            <ul class="contact-links ">
-                <li class="contact-links-item">
-                    <a href="mailto:thehikers@ireland.ie" aria-label="Our Email Address">
-                        <i class="fas fa-envelope" aria-hidden="true"></i>
-                        thehikers@ireland.ie
+
+
+
+
+
+
+
+
+
+
+
+
+
+        </section>
+
+        <section>
+            <!----------------- Contact and Enquiry Form page --------------------->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <footer>
+            <div class="contact">
+                <ul class="contact-links ">
+                    <li class="contact-links-item">
+                        <a href="mailto:thehikers@ireland.ie" aria-label="Our Email Address">
+                            <i class="fas fa-envelope" aria-hidden="true"></i>
+                            thehikers@ireland.ie
+                        </a>
+                    </li>
+                    <li class="contact-links-item">
+                        <a href="tel:+012345678" aria-label="Our Phone Number">
+                            <i class="fas fa-phone-alt" aria-hidden="true"></i>
+                            555 4657800
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <ul class="social-network">
+                <li>
+                    <a href="https://www.facebook.com" target="_blank" aria-label="Find Us Facebook">
+                        <i class="fab fa-facebook-f"></i>
                     </a>
                 </li>
-                <li class="contact-links-item">
-                    <a href="tel:+012345678" aria-label="Our Phone Number">
-                        <i class="fas fa-phone-alt" aria-hidden="true"></i>
-                        555 4657800
+                <li>
+                    <a href="https://twitter.com" target="_blank" aria-label="Find Us Twitter">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://instagram.com" target="_blank" aria-label="Find Us Instagram">
+                        <i class="fab fa-instagram"></i>
                     </a>
                 </li>
             </ul>
-        </div>
-        <ul class="social-network">
-            <li>
-                <a href="https://www.facebook.com" target="_blank" aria-label="Find Us Facebook">
-                    <i class="fab fa-facebook-f"></i>
-                </a>
-            </li>
-            <li>
-                <a href="https://twitter.com" target="_blank" aria-label="Find Us Twitter">
-                    <i class="fab fa-twitter"></i>
-                </a>
-            </li>
-            <li>
-                <a href="https://instagram.com" target="_blank" aria-label="Find Us Instagram">
-                    <i class="fab fa-instagram"></i>
-                </a>
-            </li>
-        </ul>
-    </footer>
+        </footer>
 
 
 
@@ -208,9 +280,9 @@
 
 
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 
 </html>
