add structure to gallery.html

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="Description"
-        content="The Hikers, Dublin based hiking group offering a variation of cheap guided tours around Ireland and much more" />
+    <meta name="Description" content="The Hikers, Dublin based hiking group offering a variation of cheap guided tours around Ireland and much more" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -164,23 +163,8 @@
                 </div>
             </div>
         </div>
-    </section>
-
-        <section id="gallery">
-            <!------------------------ Gallery page ------------------------------>
-            <div class="gallery">
-            <div class="container">
-                <div class="row heading-text">
-                    <div class="col-m">
-                        <h1>Gallery</h1>
-                    </div>
-                </div>
-            </div>
-            <div class="gallery">
-
-            </div>
-         </div>
-        </section>
+    </section>  
+        
  <section id="image-contact"></section>
         <section id="contact">
             <!----------------- Contact and Enquiry Form page --------------------->
@@ -245,7 +229,6 @@
                                 <label for="text">Your Message </label>
                                 <textarea id="text" name="text" class="input-box" cols="40" rows="10"
                                     placeholder="Your enquire/comment/ here..."></textarea>
-
                             </div>
                             <div class="row">
                                 <div class="col-md-12 text-center">
@@ -256,35 +239,7 @@
                     </form>
                 </div>
             </div>
-           
         </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
         <footer>
             <div class="contact">
@@ -321,17 +276,6 @@
                 </li>
             </ul>
         </footer>
-
-
-
-
-
-
-
-
-
-
-
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
