add images to gallery.html, fix spelling

--- a/gallery.html
+++ b/gallery.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<meta name="Description" content="The Hikers, Dublin based hiking group offering a variation of cheap guided tours around Ireland and much more"/>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
-<link rel="stylesheet" href="assets/css/style.css">
-<title>The Hikers | Gallery</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="Description"
+        content="The Hikers, Dublin based hiking group offering a variation of cheap guided tours around Ireland and much more" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>The Hikers | Gallery</title>
 </head>
+
 <body>
- <header>
+    <header>
         <!---------------------- Site navigation ------------------------->
         <!------- CREDIT: navbar code customized from Bootstrap 4.5 ------->
         <div class="container-fluid navalert-container">
@@ -42,61 +45,104 @@
             </nav>
         </div>
     </header>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  <footer>
-            <div class="contact">
-                <ul class="contact-links ">
-                    <li class="contact-links-item">
-                        <a href="mailto:thehikers@ireland.ie" aria-label="Our Email Address">
-                            <i class="fas fa-envelope" aria-hidden="true"></i>
-                            thehikers@ireland.ie
-                        </a>
-                    </li>
-                    <li class="contact-links-item">
-                        <a href="tel:+012345678" aria-label="Our Phone Number">
-                            <i class="fas fa-phone-alt" aria-hidden="true"></i>
-                            555 4657800
-                        </a>
-                    </li>
-                </ul>
+    <section id="gallery">
+        <div class="container">
+            <div class="row heading-text">
+                <div class="col-m">
+                    <h1>Gallery</h1>
+                </div>
             </div>
-            <ul class="social-network">
-                <li>
-                    <a href="https://www.facebook.com" target="_blank" aria-label="Find Us Facebook">
-                        <i class="fab fa-facebook-f"></i>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-md-6 col-xl-3">
+                    <img src="assets/images/gallery/couple-in-the-car.jpg" alt="couple in the car">
+                </div>
+                <div class="col-12 col-md-6 col-xl-3"></div>
+                    <img src="assets/images/gallery/girl-by-the-stream.jpg" alt="girl by the stream">
+                <div class="col-12 col-md-6 col-xl-3">
+                    <img src="assets/images/gallery/girls-by-the-lake.jpg" alt="girls by the lake">
+                </div>
+                <div class="col-12 col-md-6 col-xl-3">
+                    <img src="assets/images/gallery/girls-camping.jpg" alt="girls camping">
+                </div>
+                <div class="col-12 col-md-6 col-xl-3">
+                    <img src="assets/images/gallery/girls-on-the-mountain.jpg" alt="girls on the mountain">
+                </div>
+                <div class="col-12 col-md-6 col-xl-3">
+                    <img src="assets/images/gallery/group-on-the-mountain.jpg" alt="group on the mountain">
+                </div>
+                <div class="col-12 col-md-6 col-xl-3">
+                    <img src="assets/images/gallery/irish-sheep.jpg" alt="irish sheep">
+                </div>
+                <div class="col-12 col-md-6 col-xl-3">
+                    <img src="assets/images/gallery/keel-strand-sign.jpg" alt="keel strand sign">
+                </div>
+                <div class="col-12 col-md-6 col-xl-3">
+                    <img src="assets/images/gallery/lunch-break.jpg" alt="lunch break">
+                </div>
+                <div class="col-12 col-md-6 col-xl-3">
+                    <img src="assets/images/gallery/the-hikers-sign.jpg" alt="the hikers sign">
+                </div>
+                <div class="col-12 col-md-6 col-xl-3">
+                    <img src="assets/images/gallery/tourist-in-santa-hat.jpg" alt="tourist in santa hat">
+                </div>
+                <div class="col-12 col-md-6 col-xl-3">
+                    <img src="assets/images/gallery/connemara-tour.jpg" alt="connemara tour">
+                </div>
+                <div class="col-12 col-md-6 col-xl-3">
+                    <img src="assets/images/gallery/wicklow-tour.jpg" alt="wicklow tour">
+                </div>
+                <div class="col-12 col-md-6 col-xl-3">
+                    <img src="assets/images/gallery/girls-in-the-forest.jpg" alt="girls in the forest">
+                </div>
+                <div class="col-12 col-md-6 col-xl-3">
+                    <img src="assets/images/gallery/on-the-mountain.jpg" alt="on the mountain">
+                </div>
+                <div class="col-12 col-md-6 col-xl-3">
+                    <img src="assets/images/gallery/girls-on-the-beach.jpg" alt="girls on the beach">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="contact">
+            <ul class="contact-links ">
+                <li class="contact-links-item">
+                    <a href="mailto:thehikers@ireland.ie" aria-label="Our Email Address">
+                        <i class="fas fa-envelope" aria-hidden="true"></i>
+                        thehikers@ireland.ie
                     </a>
                 </li>
-                <li>
-                    <a href="https://twitter.com" target="_blank" aria-label="Find Us Twitter">
-                        <i class="fab fa-twitter"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://instagram.com" target="_blank" aria-label="Find Us Instagram">
-                        <i class="fab fa-instagram"></i>
+                <li class="contact-links-item">
+                    <a href="tel:+012345678" aria-label="Our Phone Number">
+                        <i class="fas fa-phone-alt" aria-hidden="true"></i>
+                        555 4657800
                     </a>
                 </li>
             </ul>
-        </footer>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
+        </div>
+        <ul class="social-network">
+            <li>
+                <a href="https://www.facebook.com" target="_blank" aria-label="Find Us Facebook">
+                    <i class="fab fa-facebook-f"></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://twitter.com" target="_blank" aria-label="Find Us Twitter">
+                    <i class="fab fa-twitter"></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://instagram.com" target="_blank" aria-label="Find Us Instagram">
+                    <i class="fab fa-instagram"></i>
+                </a>
+            </li>
+        </ul>
+    </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
