--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
         </div>
     </section>
     <!------------------------ About/Tours page ------------------------>
-    <section id="About">
-        <div class="container ">
+    <section id="about">
+        <div class="container">
             <div class="row heading-text">
                 <div class="col-12">
                     <h1>About</h1>
@@ -110,7 +110,7 @@
             <div class="row my-5 content-item-text">
                 <div class="col-12">
                     <h2><i class="fab fas fas fa-hiking"></i> Tour option to chose :</h2>
-                    <p> We are organizing hiking tours from half day up to three days including a certified tour
+                    <p> We are organizing hiking tours from half day up to three days       including a certified tour
                         guide with a good sense of humor and include
                         different variations for the trails in the region you choose to go to, depending on your
                         time, desire, age and level of advancement,
@@ -133,9 +133,9 @@
                         <div class="col-md d-flex">
                             <div class="card card-body flex-fill">
                                 <!------- CREDIT: Photo by Steven Hylands from Pexels ------->
-                                <img src="assets/images/wiclow4.jpg" class="card-img" alt="Wiclow mountain view">
+                                <img src="assets/images/wicklow.jpg" class="card-img" alt="Wicklow mountain view">
                                 <div class="card-body-desc">
-                                    <h3>Wiclow Mountain Tours</h3>
+                                    <h3>Wicklow Mountain Tours</h3>
                                 </div>
                             </div>
                         </div>
@@ -163,8 +163,9 @@
                 </div>
             </div>
         </div>
-    </section>  
-        
+    </section>
+
+      
  <section id="image-contact"></section>
         <section id="contact">
             <!----------------- Contact and Enquiry Form page --------------------->
@@ -208,11 +209,11 @@
                                     placeholder="Your email address..." required>
                             </div>
                             <div class="form-group">
-                                <label for="tours">Tours available</label>
-                                <select id="tours" name="tours" class="input-box">
-                                    <option value="wiclow-tour">Wiclow mountain tour</option>
-                                    <option value="conemara-tour">Conemara mountain tour</option>
-                                    <option value="clifs-of-mohers-tour">Cliffs of moher tour</option>
+                                <label for="tour">Tours available</label>
+                                <select id="tour" name="tour" class="input-box">
+                                    <option value="wicklow-tour">Wicklow mountain tour</option>
+                                    <option value="connemara-tour">Conemara mountain tour</option>
+                                    <option value="cliffs-of-moher-tour">Cliffs of moher tour</option>
                                     <option value="other-tour">Other tour</option>
                                 </select>
                             </div>
@@ -227,8 +228,7 @@
                             </div>
                             <div>
                                 <label for="text">Your Message </label>
-                                <textarea id="text" name="text" class="input-box" cols="40" rows="10"
-                                    placeholder="Your enquire/comment/ here..."></textarea>
+                                <textarea id="text" name="text" class="input-box" cols="40" rows="10" placeholder="Your enquire/comment/ here..."></textarea>
                             </div>
                             <div class="row">
                                 <div class="col-md-12 text-center">
@@ -276,7 +276,6 @@
                 </li>
             </ul>
         </footer>
-
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
