add change a navbar and connecting links

--- a/index.html
+++ b/index.html
@@ -31,10 +31,13 @@
                                     class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link underline" id="navbar-color-about" href="#about">About/Tours</a>
+                            <a class="nav-link underline" id="navbar-color-about" href="#about">About</a>
+                        </li>
+                         <li class="nav-item">
+                            <a class="nav-link underline" id="navbar-color-tours" href="#tours">Tours</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link underline" id="navbar-color-gallery" href="#gallery">Gallery</a>
+                            <a class="nav-link underline" id="navbar-color-gallery" href="gallery.html" target="_blank">Gallery</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link underline" id="navbar-color-contact" href="#contact">Contact</a>
@@ -104,8 +107,18 @@
             </div>
         </div>
 </section>
+
  <section id="image-tours"></section>
-    <section id="tours">   
+   <section id="tours"> 
+<div class="container">
+            <div class="row heading-text">
+                <div class="col-12">
+                    <h1>Tour option</h1>
+                </div>
+            </div>
+        </div>
+
+   
         <div class="container">
             <div class="row my-5 content-item-text">
                 <div class="col-12">
@@ -142,7 +155,7 @@
                         <div class="col-md d-flex">
                             <div class="card card-body flex-fill">
                                 <!------- CREDIT: Image by _Artemis_ from Pixabay  ------->
-                                <img src="assets/images/conemara.jpg" class="card-img" alt="Conemara mountain view">
+                                <img src="assets/images/connemara.jpg" class="card-img" alt="Conemara mountain view">
                                 <div class="card-desc">
                                     <h3>Conemara Mountain Tour</h3>
                                 </div>
