--- a/gallery.html
+++ b/gallery.html
@@ -28,17 +28,21 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link underline" id="navbar-color-home" href="#">Home <span
+                            <a class="nav-link underline" id="navbar-color-home" target="_blank" href="index.html">Home <span
+                                    class="sr-only"></span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link underline" id="navbar-color-about" target="_blank" href="index.html#about">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link underline" id="navbar-color-tours" target="_blank" href="index.html#tours">Tours</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link underline" id="navbar-color-gallery" target="_blank" href="#">Gallery<span
                                     class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link underline" id="navbar-color-about" href="#about">About/Tours</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link underline" id="navbar-color-gallery" href="#gallery">Gallery</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link underline" id="navbar-color-contact" href="#contact">Contact</a>
+                            <a class="nav-link underline" id="navbar-color-contact" target="_blank" href="index.html#contact">Contact</a>
                         </li>
                     </ul>
                 </div>
