--- a/gallery.html
+++ b/gallery.html
@@ -28,30 +28,32 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link underline" id="navbar-color-home" target="_blank" href="index.html">Home <span
-                                    class="sr-only"></span></a>
+                            <a class="nav-link underline" id="navbar-color-home" target="_blank" href="index.html">Home<span class="sr-only"></span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link underline" id="navbar-color-about" target="_blank" href="index.html#about">About</a>
+                            <a class="nav-link underline" id="navbar-color-about" target="_blank" href="index.html#position-about">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link underline" id="navbar-color-tours" target="_blank" href="index.html#tours">Tours</a>
+                            <a class="nav-link underline" id="navbar-color-tours" target="_blank" href="index.html#position-tours">Tours</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link underline" id="navbar-color-gallery" target="_blank" href="#">Gallery<span
                                     class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link underline" id="navbar-color-contact" target="_blank" href="index.html#contact">Contact</a>
+                            <a class="nav-link underline" id="navbar-color-contact" target="_blank" href="index.html#position-contact">Contact</a>
                         </li>
                     </ul>
                 </div>
             </nav>
         </div>
     </header>
-    <section id="gallery">
+        <!---------------------- Main navigation ------------------------->
+    
+    <div id="position-gallery">
+    <section>
         <div class="container">
-            <div class="row heading-text">
+            <div class="row mt-5 heading-text">
                 <div class="col-m">
                     <h1>Gallery</h1>
                 </div>
@@ -109,7 +111,8 @@
             </div>
         </div>
     </section>
-
+</div>
+<!----------------- Footer page --------------------->
     <footer>
         <div class="contact">
             <ul class="contact-links ">
